--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 header h1 {
     color: #0076bb;
 }
+nav ul {padding: 0;}
 nav ul li {
     float: left;
 }
@@ -17,4 +18,5 @@ main img {
 }
 footer {
     text-align: center;
+    clear: both;
 }
